--- a/style/index.css
+++ b/style/index.css
@@ -158,7 +158,7 @@ footer{
     display: flex;
     justify-content: center;
     padding: 3% 0;
-    background-color: thistle;
+    background-color:blanchedalmond;
 }
 footer button{
     padding:1%;
