--- a/style/index.css
+++ b/style/index.css
@@ -38,7 +38,7 @@ blockquote, q {
 	}
 *{
     box-sizing: border-box;
-     
+    /* border: 1px solid black;  */
 }
    /*General Styles*/
 html{
@@ -47,10 +47,11 @@ html{
 body{
      font-size:16px;
      line-height:1.5;
-     background-color: darkseagreen;
+     background-color: slategrey;
    }
 a{
      text-decoration:none;
+     
    }
 h1,h2,h3,h4,h5,h6{
      letter-spacing:3px;
@@ -66,6 +67,18 @@ header nav a{
     padding:1% 5%;
     border:1px solid black
 }
+header nav a:hover{
+    background-color: white;
+    color: black;
+    animation-duration:1s;
+    animation-name: bounce;
+    animation-iteration-count:inherit;
+}
+@keyframes bounce {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(-25px); }
+    100% { transform: translateY(0); }
+  }
 h1{
     font-size: 4rem;
     font-weight: 900;
@@ -106,15 +119,22 @@ h1{
     font-size: 5rem;
     color:white;
 }
+.cta h2:hover{
+    color:black;
+    text-transform: capitalize;
+}
 .cta button{
     width:35%;
     font-weight: 900;
     background-color: transparent;
     color: white;
 } 
-
+.cta button:hover{
+    color:black;
+    text-transform: capitalize;
+}
 /*Main*/
-#main {
+/* #main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -153,7 +173,29 @@ h1{
 }
 .pic6{
     background-image: url('../images/pic6.jpg');
+} */
+.main{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-evenly;
+    max-width:100%;
+    
 }
+.main .tile{
+    width:33%; 
+    display: flex;
+    flex-flow:column wrap;
+    justify-content: center;
+    align-items: center;
+}
+.main .tile img{
+    width:70%;
+    height:60%;
+}
+.tile h2:hover{
+    color:white;
+}
+/* Footer */
 footer{
     display: flex;
     justify-content: center;
@@ -164,6 +206,11 @@ footer button{
     padding:1%;
     width:10%;
 }
+footer button:hover{
+    animation-duration:1s;
+    animation-name: bounce;
+    animation-iteration-count:inherit;
+}
 .linkedin{
     background-color: blue;
     color: white;
@@ -172,3 +219,4 @@ footer button{
     background-color: black;
     color:white;
 }
+
